fixing nav spacing, increased body copy font, spacing in h1's

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 html {
     box-sizing: border-box;
     background-color: #d8d8d8;
-    font-size: 1em;
+    font-size: 1.25em;
     
     -moz-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
@@ -30,7 +30,7 @@ body {
     text-decoration: none;
     font-family: 'Josefin Sans', sans-serif;
     color: #696666;
-    font-size: 1.25em;
+    font-size: .75em;
 }
 
 .navigation a:hover {
@@ -61,7 +61,7 @@ p {
 
 .contact {
     margin: 0 auto;
-    padding-left: calc(50% - 155px)
+    padding-left: calc(50% - 115px);
 }
 
 .email {
@@ -76,7 +76,7 @@ p {
 }
     
 .socialmedia {
-    width: 80px;
+    width: 60px;
     margin: 10px;
     display: inline;
 }
@@ -86,7 +86,8 @@ p {
 }
 
 h1 {
-    padding: 10px;
+    padding:10px;
+    padding-left: 35px;
     background-color: #fee;
     margin-top: 10px;
     margin-bottom: 0;
@@ -94,15 +95,15 @@ h1 {
 }
 
 .backtotop {
-    width: 70px;
-    height: 70px;
-    border-radius: 35px;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
     float: right;
     background-color:#fee;
     margin: 10px;
     text-decoration: none;
     text-align: center;
-    padding-top: 15px;
+    padding-top: 12px;
     font-family: 'Josefin Sans', sans-serif;
     color: #696666;
 }
@@ -112,24 +113,21 @@ h1 {
 }
 
 .copyright {
-    padding: 0;
-    margin: 10px;
+    padding-top: 20px;
 }
 
 .images {
     width:100%;
 }
 .copyright {
-    position: absolute;
-    
+    position: absolute;   
 }
 
 @media only screen and (min-width: 38em) {
     
     .portrait {
         padding-left: calc(50% - 155px);
-        max-width: 35em;
-        min-width: 30em;
+        max-width: 30em;
         margin: 0 auto;
     }
 }
@@ -137,9 +135,9 @@ h1 {
 @media only screen and (min-width: 60em) {
     
     .portrait {
-        padding-left: calc(50% - 450px);
-        max-width: 45em;
-        min-width: 40em;
+        padding-left: calc(50% - 230px);
+        max-width: 50em;
+        margin: 0 auto;
     }
     
     .wordmark {
